--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -56,9 +56,9 @@ dwindle {
     no_gaps_when_only = 1
 }
 
-master {
-    new_is_master = true
-}
+# master {
+#     new_is_master = true
+# }
 
 
 misc {
