--- a/.config/hypr/start.conf
+++ b/.config/hypr/start.conf
@@ -19,7 +19,7 @@ exec-once = hyprctl setcursor Simp1e-Gruvbox-Dark 24
 $localBin = $HOME/.local/bin
 $scriptsDir = $HOME/.config/hypr/scripts
 # Set programs that you use
-$terminal = wezterm
+$terminal = kitty
 $fileManager = thunar
 $menu = wofi --show drun
 $volume = $scriptsDir/volume
