--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -8,7 +8,7 @@ workspace = 3, monitor:DP-3, on-created-empty:obsidian
 workspace = 4, monitor:DP-3, on-created-empty:spotify
 workspace = 5, monitor:DP-3, default:true, on-created-empty:discord
 workspace = 6, monitor:DP-1, default:true, on-created-empty:vivaldi --enable-blink-features=MiddleClickAutoscroll
-workspace = 7, monitor:DP-1, on-created-empty:wezterm
+workspace = 7, monitor:DP-1, on-created-empty:kitty
 workspace = 8, monitor:DP-1, on-created-empty:steam
 workspace = 9, monitor:DP-1 
 workspace = 10, monitor:DP-1
