--- a/.config/hypr/keys.conf
+++ b/.config/hypr/keys.conf
@@ -35,7 +35,7 @@ bind = $mainMod, G, exec, google-chrome-stable
 
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, T, exec, $terminal
+bind = $mainMod, T, exec, [float;tile] $terminal
 bind = $mainMod, Q, killactive, 
 bind = ALT, F4, killactive,
 #bind = $mainMod, M, exit, 
