Hide cursor Hypr, scroll wezterm

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -26,6 +26,13 @@ misc {
     animate_mouse_windowdragging = true
 }
 
+cursor {
+    inactive_timeout = 10
+    hide_on_key_press = true
+    # no_warps = true
+    persistent_warps = true
+}
+
 binds {
     workspace_back_and_forth = true
 }
