--- a/.config/hypr/blur.conf
+++ b/.config/hypr/blur.conf
@@ -15,13 +15,22 @@ decoration {
 
     }
 
-    drop_shadow = yes
-    shadow_range = 10
-    shadow_render_power = 3
-    shadow_ignore_window = false
+    shadow {
+        enabled = true
+        range = 10
+        render_power = 3
+        ignore_window = false
+        color = rgba(3c383600)
+        color_inactive = rgba(28282800)
+    }
 
-    col.shadow = rgba(3c383600)
-    col.shadow_inactive = rgba(28282800)
+    # drop_shadow = yes
+    # shadow_range = 10
+    # shadow_render_power = 3
+    # shadow_ignore_window = false
+
+    # col.shadow = rgba(3c383600)
+    # col.shadow_inactive = rgba(28282800)
     
     fullscreen_opacity = 1
     # inactive_opacity = 0.95
