--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -3,16 +3,17 @@ general {
     
     unlock_cmd = hyprctl dispatch dpms on 
     
-    after_sleep = hyprctl dispatch dpms on 
+    # after_sleep = hyprctl dispatch dpms on 
     ignore_dbus_inhibit = false
 }
 
 listener {
-    timeout = 900
+    timeout = 600
     on-timeout = hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on
 }
-listener {
-    timeout = 7200
-    on-timeout = systemctl suspend
-}
+# listener {
+#     timeout = 7200
+#     on-timeout = systemctl suspend
+#     on-resume = hyprctl dispatch dpms on
+# }
