--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,7 +20,7 @@ misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
     mouse_move_enables_dpms = true
-    no_direct_scanout = true
+    # no_direct_scanout = true
     vrr = 1
     animate_manual_resizes = true
     animate_mouse_windowdragging = true
@@ -60,7 +60,7 @@ source = ~/.config/hypr/conf/animation.conf
 dwindle {
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
-    no_gaps_when_only = 1
+    # no_gaps_when_only = 1
 }
 
 # master {
@@ -70,7 +70,7 @@ dwindle {
 
 misc {
     force_default_wallpaper = 1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    no_direct_scanout = true
+    # no_direct_scanout = true
     layers_hog_keyboard_focus = true
 }
 
