--- a/.config/hypr/keys.conf
+++ b/.config/hypr/keys.conf
@@ -20,7 +20,7 @@ bind = $mainMod SHIFT, K, resizeactive,0 -50
 bind = $mainMod SHIFT, J, resizeactive,1 50
 bind = $mainMod CTRL, F, fullscreen, 0
 bind = $mainMod SHIFT, F, fullscreen, 1
-bind = $mainMod ALT, F, fakefullscreen
+# bind = $mainMod ALT, F, fakefullscreen
 # Move
 bind = $mainMod CTRL, H, movewindow, l
 bind = $mainMod CTRL, L, movewindow, r
@@ -56,7 +56,6 @@ bind = $mainMod, K, movefocus, d
 
 bind = ALT, Tab, cyclenext
 bind = ALT SHIFT, Tab, cyclenext, prev
-bind = $mainMod, O, toggleopaque
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
