--- a/.config/hypr/start.conf
+++ b/.config/hypr/start.conf
@@ -11,16 +11,17 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = hypridle
-exec-once = hyprctl setcursor Simp1e-Gruvbox-Dark 24
-# exec-once = hyprctl setcursor macOS 24
+# exec-once = hyprctl setcursor Simp1e-Gruvbox-Dark 24
+exec-once = hyprctl setcursor Capitaine Gruvbox 24
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 $localBin = $HOME/.local/bin
 $scriptsDir = $HOME/.config/hypr/scripts
 # Set programs that you use
+$terminal = wezterm
 # $terminal = kitty
-$terminal = wezterm start --always-new-process
+# $terminal = wezterm start --always-new-process
 $fileManager = thunar
 $menu = wofi --show drun
 $volume = $scriptsDir/volume
@@ -29,7 +30,7 @@ $volume = $scriptsDir/volume
 # $menu = bemenu-run --hb '##467b96' --hf '##dfdfdf' --tb '##467b96' --tf '##dfdfdf' -H 20 --fn 'Hack' -p 'Run:'
 
 # Some default env vars.
-env = XCURSOR_THEME,Simp1e-Gruvbox-Dark
+env = XCURSOR_THEME,Capitaine Cursors (Gruvbox)
 env = XCURSOR_SIZE,24
 # env = HYPRCURSOR_THEME,macOS
 # env = HYPRCURSOR_SIZE,24
@@ -37,8 +38,16 @@ env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
 #env = GBM_BACKEND=nvidia-drm
 #env = __GLX_VENDOR_LIBRARY_NAME=nvidia
 #env = LIBVA_DRIVER_NAME=nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
+# env = WLR_NO_HARDWARE_CURSORS,1
 env = __GL_GSYNC_ALLOWED=1
 env = __GL_VRR_ALLOWED=0
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = NVD_BACKEND,direct
 
+cursor {
+    no_hardware_cursors = true
+}
 env = QT_QPA_PLATFORM,xcb
