--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -5,10 +5,21 @@ monitor=DP-3,1920x1080@70,0x180,1
 workspace = 1, monitor:DP-3
 workspace = 2, monitor:DP-3
 workspace = 3, monitor:DP-3, on-created-empty:obsidian
-workspace = 4, monitor:DP-3, on-created-empty:spotify
+workspace = 4, monitor:DP-3, on-created-empty:cider
 workspace = 5, monitor:DP-3, default:true, on-created-empty:discord
 workspace = 6, monitor:DP-1, default:true, on-created-empty:vivaldi --enable-blink-features=MiddleClickAutoscroll
-workspace = 7, monitor:DP-1, on-created-empty:kitty
+workspace = 7, monitor:DP-1, on-created-empty:wezterm
 workspace = 8, monitor:DP-1, on-created-empty:steam
 workspace = 9, monitor:DP-1 
 workspace = 10, monitor:DP-1
+
+workspace = special:magic, on-created-empty:wezterm
+workspace = w[t1], gapsout:0, gapsin:0
+workspace = w[tg1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[t1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[t1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[tg1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[tg1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
