--- a/.config/hypr/blur.conf
+++ b/.config/hypr/blur.conf
@@ -8,10 +8,11 @@ decoration {
         size = 6
         passes = 4
         popups = true
-	      ignore_opacity = true
-	      # blur_xray = true
-	brightness = 0.56
-	# special = true
+        ignore_opacity = true
+        # blur_xray = true
+        brightness = 0.56
+        # input_methods = true
+        # special = true
 
     }
 
@@ -31,7 +32,7 @@ decoration {
 
     # col.shadow = rgba(3c383600)
     # col.shadow_inactive = rgba(28282800)
-    
+
     fullscreen_opacity = 1
     # inactive_opacity = 0.95
     active_opacity = 1
@@ -45,4 +46,5 @@ blurls = mako
 
 layerrule = blur, notifications
 layerrule = ignorezero, notifications
+layerrule = blur, waybar
 
