--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -12,8 +12,8 @@ listener {
     on-timeout = hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on
 }
-# listener {
-#     timeout = 7200
-#     on-timeout = systemctl suspend
-#     on-resume = hyprctl dispatch dpms on
-# }
+listener {
+    timeout = 1800
+    on-timeout = systemctl suspend
+    # on-resume = hyprctl dispatch dpms on
+}
