--- a/.config/hypr/keys.conf
+++ b/.config/hypr/keys.conf
@@ -3,6 +3,7 @@ bind = $mainMod CTRL, V, exec, cliphist list | rofi -dmenu | cliphist decode | w
 
 bind = $mainMod SHIFT, P, exec, hyprctl dispatch dpms off
 bind = $mainMod SHIFT, E, exec, hyprctl dispatch exit
+bind = $mainMod SHIFT, Y, exec, systemctl suspend
 bind = $mainMod CTRL, left, workspace, -1
 bind = $mainMod CTRL, right, workspace, +1
 
@@ -88,8 +89,8 @@ bind = $mainMod, B, togglespecialworkspace, files
 bind = $mainMod SHIFT, B, movetoworkspace, special:files
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, mouse_down, workspace, e-1
+bind = $mainMod, mouse_up, workspace, e+1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -106,4 +107,5 @@ bind = , xf86audiostop, exec, playerctl stop
 
 
 bind = , Print, exec, grim
-bind = $mainMod, Print, exec, grim -g "$(slurp)"
+bind = $mainMod, Print, exec, grim -g "$(slurp)" - | wl-copy
+# bind = $mainMod SHIFT, Print, exec, grim -g "$(slurp)" - | wl-copy
