--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -31,6 +31,8 @@ cursor {
     hide_on_key_press = true
     # no_warps = true
     persistent_warps = true
+    warp_on_change_workspace = 1
+    use_cpu_buffer = 2
 }
 
 binds {
@@ -40,11 +42,11 @@ binds {
 general {
     gaps_in = 2
     gaps_out = 4
-    border_size = 2
+    border_size = 1
 
-    col.active_border = rgb(fe8019) rgb(d65d0e) 25deg
+    col.active_border = rgba(fe8019ff) rgba(d65d0ea0) 45deg
     # col.inactive_border = rgba(d65d0e20) 
-    col.inactive_border = rgba(121212dd) rgba(121212dd) 25deg
+    col.inactive_border = rgba(121212dd) rgba(12121280) 45deg
     layout = dwindle
 
     allow_tearing = false
