--- a/.config/hypr/input.conf
+++ b/.config/hypr/input.conf
@@ -9,11 +9,12 @@ input {
     follow_mouse = 2
     numlock_by_default = false
     accel_profile = flat
+    # force_no_accel = true
 
     touchpad {
        natural_scroll = true
        tap-to-click = true
-       scroll_factor = 0.3
+       scroll_factor = 0.08
        clickfinger_behavior = true
        tap_button_map = lrm
     }
