--- a/.config/hypr/blur.conf
+++ b/.config/hypr/blur.conf
@@ -20,9 +20,13 @@ decoration {
         enabled = true
         range = 10
         render_power = 3
-        ignore_window = false
-        color = rgba(3c383600)
-        color_inactive = rgba(28282800)
+        ignore_window = true
+        # color = rgba(3c3836ff)
+        # color_inactive = rgba(282828ff)
+        color = rgba(000000a0)
+        color_inactive = rgba(00000080)
+        offset = 2 2
+        # scale = 1.0
     }
 
     # drop_shadow = yes
