nvim flash + small stuff

--- a/.config/hypr/input.conf
+++ b/.config/hypr/input.conf
@@ -10,16 +10,40 @@ input {
     numlock_by_default = false
     accel_profile = flat
     # force_no_accel = true
+    sensitivity = 0.32
+    # sensitivity = -0.32
+    # accel_profile = adaptive
 
     touchpad {
        natural_scroll = true
        tap-to-click = true
-       scroll_factor = 0.08
+       scroll_factor = 0.10
        clickfinger_behavior = true
        tap_button_map = lrm
     }
+    # device {
+    #     name = "tobias-magiska-följplatta"
+    #     sensitivity = 0.32
+    # }
 
-    sensitivity = 0.32 # -1.0 - 1.0, 0 means no modification.
+    # sensitivity = 0.32 # -1.0 - 1.0, 0 means no modification.
+    # sensitivity = 0.30 # -1.0 - 1.0, 0 means no modification.
+}
+device {
+    name = logitech-g305-1
+    accel_profile = flat
+    sensitivity = 0.12
+}
+device {
+    name = tobias-magiska-följplatta
+    # name = apple-touchpad
+    sensitivity = -0.0
+    accel_profile = adaptive
+    natural_scroll = true
+    tap-to-click = true
+    clickfinger_behavior = true
+    tap_button_map = lrm
+    # accel_profile = custom 500 0.0 0.5
 }
 
 gestures {
