--- a/.config/hypr/blur.conf
+++ b/.config/hypr/blur.conf
@@ -2,7 +2,8 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 3
-
+    # rounding_power = 4.0
+    # rounding_power = 4.0
     blur {
         enabled = true
         size = 6
@@ -26,7 +27,7 @@ decoration {
         color = rgba(000000a0)
         color_inactive = rgba(00000080)
         offset = 2 2
-        # scale = 1.0
+        # scale = 1.2
     }
 
     # drop_shadow = yes
