--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -13,7 +13,15 @@ listener {
     on-resume = hyprctl dispatch dpms on
 }
 listener {
+    timeout = 1799
+
+    on-timeout = hyprctl dispatch dpms on
+    # on-timeout = systemctl suspend
+    # on-resume = hyprctl dispatch dpms on
+}
+listener {
     timeout = 1800
+
     on-timeout = systemctl suspend
     # on-resume = hyprctl dispatch dpms on
 }
