--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -3,7 +3,7 @@ general {
     
     unlock_cmd = hyprctl dispatch dpms on 
     
-    # after_sleep = hyprctl dispatch dpms on 
+    after_sleep = hyprctl dispatch dpms on 
     ignore_dbus_inhibit = false
 }
 
@@ -13,14 +13,14 @@ listener {
     on-resume = hyprctl dispatch dpms on
 }
 listener {
-    timeout = 1799
+    timeout = 3555
 
     on-timeout = hyprctl dispatch dpms on
     # on-timeout = systemctl suspend
     # on-resume = hyprctl dispatch dpms on
 }
 listener {
-    timeout = 1800
+    timeout = 3600
 
     on-timeout = systemctl suspend
     # on-resume = hyprctl dispatch dpms on
