--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -46,7 +46,8 @@ general {
 
     col.active_border = rgba(fe8019ff) rgba(d65d0ea0) 45deg
     # col.inactive_border = rgba(d65d0e20) 
-    col.inactive_border = rgba(121212dd) rgba(12121280) 45deg
+    col.inactive_border = rgba(121212dd) rgba(121212cc) 45deg
+    # col.inactive_border = rgba(121212dd) rgba(12121280) 45deg
     layout = dwindle
 
     allow_tearing = false
